[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/box/Box.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/game/Game.gd" type="Script" id=2]
[ext_resource path="res://scenes/brick/BricksArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/paddle/Paddle.tscn" type="PackedScene" id=4]
[ext_resource path="res://icons/left_arrow.png" type="Texture" id=5]
[ext_resource path="res://icons/right_arrow.png" type="Texture" id=6]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="Box" parent="." instance=ExtResource( 1 )]

[node name="BricksArea" parent="." instance=ExtResource( 3 )]

[node name="Paddle" parent="." instance=ExtResource( 4 )]
position = Vector2( 536, 1533 )

[node name="LeftArrow" type="TouchScreenButton" parent="."]
position = Vector2( -50, 1650 )
scale = Vector2( 2.41406, 2.27369 )
normal = ExtResource( 5 )

[node name="RightArrow" type="TouchScreenButton" parent="."]
position = Vector2( 525, 1650 )
scale = Vector2( 2.35938, 2.50526 )
normal = ExtResource( 6 )

[connection signal="pressed" from="LeftArrow" to="." method="_on_LeftArrow_pressed"]
[connection signal="released" from="LeftArrow" to="." method="_on_LeftArrow_released"]
[connection signal="pressed" from="RightArrow" to="." method="_on_RightArrow_pressed"]
[connection signal="released" from="RightArrow" to="." method="_on_RightArrow_released"]
